[project]
name = "awesome-de-novo-peptide-sequencing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "rapidfuzz>=3.10.0",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
]
